public/css/style.css
/* ... */
.medium-padding {
    padding-left: 10%;
    padding-right: 10%;
}
 #datepicker{
     width: 200px;
}
 #datepicker > span:hover{
     cursor: pointer;
}
 #sortable {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 60%;
}
 #sortable li {
     font-size: 1.4em;
     height: 18px;
}
 #sortable li span {
     position: absolute;
     margin-left: -1.3em;
}
 .form-check-label {
     font-weight: normal;
     font-size: 24px;
}
 .modal {
     display: none;
    /* Hidden by default */
     position: fixed;
    /* Stay in place */
     z-index: 1;
    /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
    /* Full width */
     height: 100%;
    /* Full height */
     overflow: auto;
    /* Enable scroll if needed */
     background-color: rgb(0,0,0);
    /* Fallback color */
     background-color: rgba(0,0,0,0.4);
    /* Black w/ opacity */
     font-family: "Catamaran";
     font-size: 22px;
}
/* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
    /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
    /* Could be more or less, depending on screen size */
     text-align: center;
}
 #welcome {
     font-family: 'Herr Von Muellerhoff';
     font-weight: normal;
     font-size: 100px;
     text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
     line-height: 0.5em;
     animation-duration: 1s;
}
 #mealmate {
     font-family: 'Chewy';
     font-size: 70px;
     letter-spacing: 3px;
     text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
     animation-duration: 4s;
}
 #title-description {
     font-size: 30px;
     font-weight: bold;
     text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
     animation-duration: 3s;
}
 #get-started {
     animation-duration: 6s;
}
 #pendDiv, #pendTable, #pendTableDiv, #matchTable {
     overflow-x:auto;
 }
 .smaller-break {
     margin-bottom:2%;
}
 .animate-2s {
     animation-duration: 2s;
}
 .match-picture {
     cursor: pointer;
}

 #limit-text {
     margin-top: 5px;
     font-size: 15px;
 }
 .find-bottom-margin {
     margin-bottom: 14px;
 }
 .pics-group p {
     display: block;
     position: absolute;
     top: 50%;
     left: 50%;
     margin: 0 auto;
     transform: translate(-50%,-50%);
     color: #FFF;
     font-size: 36px;
     font-weight: bold;
     text-shadow: 0px 8px 10px rgba(0, 0, 0, 1);
     letter-spacing: 5px;
     /*border-color: white !important;
     border-width: thick !important;
     border-style: solid;
     padding: 5px 5px;
     background-color: #66A25C;
     opacity: 0.9; */
     
}
 #profile-right {
     border-left-style: solid;
     border-left-color: #D5D5D5;
     border-left-width: thin;
}
 .bold {
     font-weight: bold;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}
 .no-padding {
     padding-left: 0%;
     padding-right: 0%;
}
 #userDiningPreferences {
     list-style-position:inside;
}
 ol li {
     border: solid;
     border-radius: 5px;
     margin-bottom: 0.5%;
     margin-top: 0.5%;
     margin-left: 43%;
     margin-right: 43%;
}
 body {
     font-family: 'Catamaran';
     font-size: 22px;
     padding-top: 70px;
     overflow-x: hidden !important;
}
 h1 {
     font-weight: bold;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.6);
}
 h2 {
     font-weight: bold;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}
h4, p {
    color: #444;
}
 .add-line:after {
     content:' ';
     display:block;
     border:2px solid;
     border-color: #66A25C;
     margin-top: 1%;
}
 .margin-add-line:after {
     content:' ';
     display:block;
     border:2px solid;
     border-color: #66A25C;
     margin-top: 1%;
     margin-left: 23%;
     margin-right: 23%;
}
 .left-checkbox {
     display: inline-block; 
     text-align: left;
}
 h4 {
     font-size: 20px;
}
 #photoupload{
     display: block;
     margin-left: auto;
     margin-right: auto;
}
 .break-between-columns{
     display: none;
}
 #userName {
     text-transform: uppercase;
}
 #welcome-mobile {
     font-family: 'Herr Von Muellerhoff';
     font-weight: normal;
     font-size: 70px;
     text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
     animation-duration: 1s;
     display: none;
}
 #profile-right {
     border-left-width: thin;
     border-left-color: #D5D5D5;
     border-left-style: solid;
}
 .fa-handshake-o {
     padding-top: 4%;
     padding-bottom: 4%;
}
 #mealmate-img {
     max-width: 140px;
}
#name-header {
    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
}

.inline {
    display: inline-block !important;
}
.hidden-space {
    color: white;
    text-shadow: none;
}
 #find-mealmate-h1 {
     font-size: 36px;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.6);
}
 #find-mealmate-button {
     margin-top: 4%;
}
.match-name {
    color: #000 !important;
}
 @media (max-width: 1000px) {
     #get-started {
         font-size: 12px;
         padding: 10px 20px;
    }
     ol li {
         margin-left: 40%;
         margin-right: 40%;
    }
     #welcome {
         font-size: 80px;
    }
     #mealmate {
         font-size: 50px;
    }
     #title-description {
         font-size: 22px;
    }
     #userImage, #editProfile, .profile-name {
         padding-right:0%;
    }
     body {
         padding-top: 66px;
    }
     .header-lines {
         display: none !important;
    }
     .dropdown-a {
         text-align: left !important;
    }
      #matchTable, #pendTable {
        margin-top: 3%;
    }
     .add-line-mobile:after{
         content:' ';
         display:block;
         border:2px solid;
         border-color: #66A25C;
         margin-top: 1%;
         margin-left: 5%;
         margin-right: 5%;
     }
     #editProfile-div {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
}
/* ... */

